# KasperskyOS-uart

./: CMakeLists.txt  README.md  cross-build.sh  expected_output
client/: CMakeLists.txt  uart.c
einit/: init_hw.yaml.in  init_qemu.yaml.in  security.psl.in
